заработала авторизация, но не работают права